--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      * {
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+      }
+    </style>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="http://localhost:3000/style.css">
     
